--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-custom" >
+<div @fade  class="container-custom" >
     <div class="row-custom">
         <div class="col-md-4-custom"></div>
         <div class="col-md-4-custom">
