--- a/src/app/components/dashboard/announcements/announcements.component.html
+++ b/src/app/components/dashboard/announcements/announcements.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div @fade class="">
     <div class="card mb-4 shadow-sm">
         <div class="card-header" *ngIf="configdata.Config?.ShowHeader">
             <img class="mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="22" height="22"><span> {{ configdata.Config?.HeaderText }}</span><i *ngIf="configdata.Config?.ShowPrint" class="las la-print"></i>
